[gd_scene load_steps=24 format=2]

[ext_resource path="res://player/vr-head/HeadCamera.gd" type="Script" id=2]
[ext_resource path="res://player/vr-head/Character.gd" type="Script" id=3]
[ext_resource path="res://player/vr-head/FlatWorldPhysicsKinematicMover.gd" type="Script" id=4]
[ext_resource path="res://player/vr-head/TripleMethodOrientationGuesser.gd" type="Script" id=5]
[ext_resource path="res://player/WakeUpArea.gd" type="Script" id=6]
[ext_resource path="res://player/vr-head/OriginToHeadHeightScaler.gd" type="Script" id=7]

[sub_resource type="Resource" id=30]
script = ExtResource( 5 )

[sub_resource type="Resource" id=31]
script = ExtResource( 7 )

[sub_resource type="Resource" id=11]
script = ExtResource( 4 )
GRAVITY_ACCELERATION_MPS2 = 9.81
NORMAL_ACCELERATION_MPS2 = 9
SPRINT_ACCELERATION_MPS2 = 15
NORMAL_MAX_SPEED_MPS = 3
SPRINT_MAX_SPEED_MPS = 5
CUTOFF_VELOCITY_MPS = 0.02
DAMPING_COEFFICIENT_NSPM = 10
AIR_THICKNESS = 0.9
JUMP_SPEED_MPS = 50
MASS_KG = 70
ROTATION_SPEED_RPS = 6.28319

[sub_resource type="CapsuleShape" id=10]
radius = 0.2
height = 1.4

[sub_resource type="SphereShape" id=28]
radius = 0.9

[sub_resource type="SpatialMaterial" id=15]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0.647059, 0, 0.396078, 1 )

[sub_resource type="SphereMesh" id=16]
material = SubResource( 15 )
radius = 0.015
height = 0.03

[sub_resource type="CylinderMesh" id=29]
top_radius = 0.0
bottom_radius = 0.015
height = 0.03

[sub_resource type="SpatialMaterial" id=17]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0, 0.513726, 0.776471, 1 )

[sub_resource type="SphereMesh" id=18]
radius = 0.015
height = 0.03

[sub_resource type="SpatialMaterial" id=20]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0, 0.670588, 0.25098, 1 )

[sub_resource type="SphereMesh" id=21]
radius = 0.015
height = 0.03
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=22]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0.694118, 0.878431, 0, 1 )

[sub_resource type="SphereMesh" id=23]
radius = 0.015
height = 0.03

[sub_resource type="SpatialMaterial" id=24]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0.886275, 0.568627, 0, 1 )

[sub_resource type="SphereMesh" id=25]
radius = 0.015
height = 0.03
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=26]
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 0.898039, 0, 0, 1 )

[node name="HeadCamera" type="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )
script = ExtResource( 2 )

[node name="Character" type="KinematicBody" parent="."]
script = ExtResource( 3 )
orientation_guesser = SubResource( 30 )
scaling_fixer = SubResource( 31 )
kinematic_handler = SubResource( 11 )

[node name="CharacterCollision" type="CollisionShape" parent="Character"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.9, 0 )
shape = SubResource( 10 )

[node name="WakeUpArea" type="Area" parent="Character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0 )
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Character/WakeUpArea"]
shape = SubResource( 28 )

[node name="NeckPoint" type="Spatial" parent="Character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0.1 )

[node name="MeshInstance" type="MeshInstance" parent="Character/NeckPoint"]
mesh = SubResource( 16 )
material/0 = null

[node name="ChestPoint" type="Spatial" parent="Character/NeckPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )

[node name="MeshInstance2" type="MeshInstance" parent="Character/NeckPoint/ChestPoint"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 29 )
skeleton = NodePath("")
material/0 = SubResource( 17 )

[node name="StomachPoint" type="Spatial" parent="Character/NeckPoint/ChestPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Character/NeckPoint/ChestPoint/StomachPoint"]
mesh = SubResource( 18 )
material/0 = SubResource( 20 )

[node name="GenitaliaPoint" type="Spatial" parent="Character/NeckPoint/ChestPoint/StomachPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Character/NeckPoint/ChestPoint/StomachPoint/GenitaliaPoint"]
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="KneeHeight" type="Spatial" parent="Character/NeckPoint/ChestPoint/StomachPoint/GenitaliaPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Character/NeckPoint/ChestPoint/StomachPoint/GenitaliaPoint/KneeHeight"]
mesh = SubResource( 23 )
material/0 = SubResource( 24 )

[node name="FeetHeight" type="Spatial" parent="Character/NeckPoint/ChestPoint/StomachPoint/GenitaliaPoint/KneeHeight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Character/NeckPoint/ChestPoint/StomachPoint/GenitaliaPoint/KneeHeight/FeetHeight"]
mesh = SubResource( 25 )
material/0 = SubResource( 26 )
